[package]
name = "lingo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
thiserror = "1.0.30"
log = "0.4.14"
env_logger = "0.9.0"
lazy_static = "1.4.0"
chrono = "0.4.19"
plotters = "0.3.1"
directories = "4.0.1"
hex = "0.4.3"